補充：文章內容儲存

--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
+title: 真真ㄉ天地
+subtitle: '前端筆記區'
 description: ''
 keywords:
-author: John Doe
+author: Jhen
 language: en
 timezone: ''
 
